--- a/cv.html
+++ b/cv.html
@@ -750,8 +750,8 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon of the AATRN</a></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Theorem & its relatives<span style="float:right;"><a href="pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf">Slides</a><!--/<a href="">Video</a>--></span></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon of the Applied Algebraic Topology Network</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Theorem & its relatives<span style="float:right;"><a href="pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf">Slides</a>/<a href="https://www.youtube.com/watch?v=Y9gKSLMfVlY">Video</a></span></div>
        <div class="property">Location:</div><div class="value"><a href="https://www.youtube.com/channel/UCYOcatH32zeOTnqjag0fNkw">AATRN YouTube channel</a></div>
        <div class="property">Date:</div><div class="value">March of 2021</div>
       </div>
