--- a/cv_es.html
+++ b/cv_es.html
@@ -731,8 +731,8 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon de la AATRN</a></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Theorem & its relatives<span style="float:right;"><a href="pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf">Diapositivas</a><!--/<a href="">Vídeo</a>--></span></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon de la Applied Algebraic Topology Network</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Theorem & its relatives<span style="float:right;"><a href="pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf">Diapositivas</a>/<a href="https://www.youtube.com/watch?v=Y9gKSLMfVlY">Vídeo</a></span></div>
        <div class="property">Lugar:</div><div class="value"><a href="https://www.youtube.com/channel/UCYOcatH32zeOTnqjag0fNkw">AATRN YouTube channel</a></div>
        <div class="property">Fecha:</div><div class="value">March of 2021</div>
       </div>
