--- a/multimedia.html
+++ b/multimedia.html
@@ -404,7 +404,7 @@
   <p>These are some of my recorded talks. The talks that are available on YouTube have been collected in a <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>YouTube playlist</em></a>.</p>
   <div class="row">
     <div class="col-md-6" style="padding-top:1em;">
-       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/watch?v=Y9gKSLMfVlY" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/Y9gKSLMfVlY" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Theorem & its relatives</b><br/><a href="https://www.youtube.com/watch?v=r7Fv9o2wfXY&list=PL4kY-dS_mSmJabQiM2ySRSUusbvmdIxBt">Tutorial-a-thon of the AATRN</a>, March 2021</p>
     </div>
     <div class="col-md-6" style="padding-top:1em;">
