--- a/cv.html
+++ b/cv.html
@@ -540,6 +540,28 @@
       <h3>Conference presentations</h3>
       </div></div>
 
+      <!-- 2021
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br/><div class="cv">
+         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Slides</a> / <a href="">Video</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Functional norms, condition numbers and numerical algorithms in algebraic geometry<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Slides</a> / <a href="">Video</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with F. Cucker and A.A. Ergür.</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+         </div>
+
       <!-- 2020
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -653,7 +675,15 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris</h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/OURAGAN06052021_slides.pdf">Slides</a></span>--></div>
+        <div class="property">Institution:</div><div class="value"><a href="">Inria Paris</a></div>
+        <div class="property">Location:</div><div class="value">Paris, France (On-line)</div>
+        <div class="property">Date:</div><div class="value">30th of June of 2020</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of the Algorithmic Algebra Group of TU Berlin)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/#c1020110">Towards Finite Expectation in the Numerical Computation of the Homology of Semialgebraic Sets</a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
@@ -710,6 +740,18 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Posters</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
+        <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Poster</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets via TDA<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Poster</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a></h4></div>
@@ -804,10 +846,24 @@
    <!-- 2021
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-   <span id="MCA2021Session"></span>
+   <span id="SIAMAG2021Symposium"></span>
     <br/><div class="cv">
     <div class="year">
     <h4>2021</h4>
+    </div><div class="title">
+    <h4>&emsp;Minisymposium <em>Computational Real Algebraic Geometry</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&#160;&#160;at the <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+    <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+      <div class="property">Description:</div><div class="value">3 sessions and 12 talks</div>
+      <div class="property">Organizer:</div><div class="value">Josu&eacute; Tonelli-Cueto and Cordian Riener</div>
+      <div class="property">Location:</div><div class="value">College Station, Texas, USA (On-line due to COVID-19)</div>
+      <div class="property">Date:</div><div class="value">16th to 20th of August of 2021</div>
+    </div>
+
+   <span id="MCA2021Session"></span>
+    <br/><div class="cv">
+    <div class="year">
     </div><div class="title">
     <h4>&emsp;<a href="http://www.mca2021.org/en/special-sessions/item/26-symbolic-and-numerical-computation-with-polynomials">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div>
     <div class="year"></div><div class="title">
@@ -816,7 +872,7 @@
       <div class="property">Description:</div><div class="value">23 talks in 12 hours (tentative)</div>
       <div class="property">Organizer:</div><div class="value">Diego Armentano, Matías Bender, Alperen A. Erg&uuml;r and Josu&eacute; Tonelli-Cueto</div>
       <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
-      <div class="property">Date:</div><div class="value">del 19 al 24 de julio del 2021</div>
+      <div class="property">Date:</div><div class="value">19th to 24th of July of 2021</div>
     </div>
 
    <!-- 2020
@@ -1268,16 +1324,72 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="MCA2021"></span>
+<span id="SIAMAG2021"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://www.siam.org/conferences/cm/conference/ag21">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Hal Schenck and Josephine Yu (Conference Co-Chairs)</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+  <div class="property">Location:</div><div class="value">College Station, Texas, USA (On-line due to COVID-19)</div>
+  <div class="property">Date:</div><div class="value">16th to 20th of August of 2021</div>
+</div>
+
+<span id="MCA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="http://www.mca2021.org/en/">Mathematical Congress of the Americas 2021</a></h4></div>
   <div class="property">Organizer:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="http://www.uba.ar/">University of Buenaos Aires</a></div>
   <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">19th to 24th of July of 2021</div>
+</div>
+
+<!--<span id="ISSAC2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="http://issac-conference.org/2021/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'21)</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Frédéric Chyzak (General Chairs) &ndash; <button onclick="show(2107)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2021org">
+  <div class="property"></div><div class="value">George Labahn (Program Committee Chair)</div>
+  <div class="property"></div><div class="value">Nikolai Vassiliev (Local Arrangements Chair)</div>
+  <div class="property"></div><div class="value">Gleb Pogudin (Treasurer)</div>
+  <div class="property"></div><div class="value">Wei Li (Poster Chair)</div>
+  <div class="property"></div><div class="value">Marc Mezzarobba (Proceedings Editor)</div>
+  <div class="property"></div><div class="value">Daniel Robertz (Publicity Chair)</div>
+  <div class="property"></div><div class="value">Ekaterina Shemyakova (Tutorial Chair)</div>
+  <div class="property"></div><div class="value">Pascal Giorgi (Software Presentations Chair)</div></div>
+  <div class="property">Location:</div><div class="value">Saint Petersburg, Russia (On-line due to COVID-19)</div>
+  <div class="property">Date:</div><div class="value">18th to 22nd of July of 2021</div>
+</div>-->
+
+<span id="MEGA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://puremath.no/mega2021/">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+  <div class="property">Organizer:</div><div class="value"> Carlos D’Andrea (Chair), Timo de Wolff, Elisa Gorla,</div>
+  <div class="property"></div><div class="value">Gabriela Jeronimo, Kaie Kubjas, Anton Leykin, Fatemeh Mohammadi and Cordian Riener</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://en.uit.no/">UiT – The Arctic University of Norway</a></div>
+  <div class="property">Location:</div><div class="value">Tromsø, Norway (On-line due to COVID-19)</div>
+  <div class="property">Date:</div><div class="value">7th to 11th of June of 2021</div>
+</div>
+
+<span id="workshopTDA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Brittany Fasy, Kathryn Hess, Matthew Kahle, Sayan Mukherjee and Jose Perea</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
+  <div class="property">Location:</div><div class="value">Chicago, Illinois, USA (On-line due to COVID-19)</div>
+  <div class="property">Date:</div><div class="value">26th to 30th of April of 2021</div>
 </div>
 
 <span id="3rdBYMAT"></span>
@@ -2303,6 +2415,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
     function show(y) {
       if (y === 1901){var x = document.getElementById("ISSAC2019org");}
       if (y === 1902){var x = document.getElementById("ISSAC2020org");}
+      if (y === 2107){var x = document.getElementById("ISSAC2021org");}
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
