--- a/cv_es.html
+++ b/cv_es.html
@@ -524,6 +524,28 @@
       <h3>Ponencias en conferencias</h3>
       </div></div>
 
+      <!-- 2021
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> en la <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Diapositivas</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Diapositivas</a> / <a href="">Vídeo</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Functional norms, condition numbers and numerical algorithms in algebraic geometry<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Diapositivas</a> / <a href="">Vídeo</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Junto a F. Cucker y A.A. Ergür.</div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+      </div>
+
       <!-- 2020
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -534,7 +556,7 @@
          </div>
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#milestoneseinstein2020">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Beyond Gaussians in the probabilistic analysis of condition numbers in algebraic geometry</div>
          </div>
 
@@ -636,7 +658,15 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;Seminario del equipo OURAGAN de Inria Paris</h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/OURAGAN06052021_slides.pdf">Diapositivas</a></span>--></div>
+        <div class="property">Institución:</div><div class="value"><a href="">Inria Paris</a></div>
+        <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia (On-line)</div>
+        <div class="property">Fecha:</div><div class="value">6 de mayo del 2021</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario del Grupo de Álgebra Algorítmica de la TU Berlin)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/#c1020110">Towards Finite Expectation in the Numerical Computation of the Homology of Semialgebraic Sets</a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
@@ -646,7 +676,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminario del equipo OURAGAN de Inria Paris</h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Diapositivas</a></span></div>
         <div class="property">Institución:</div><div class="value"><a href="">Inria Paris</a></div>
         <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia (On-line)</div>
         <div class="property">Fecha:</div><div class="value">30 de junio del 2020</div>
@@ -691,6 +721,12 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Pósteres</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
+        <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Póster</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Póster on-line por la COVID-19)</div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a></h4></div>
@@ -785,10 +821,27 @@
    <!-- 2021
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-   <span id="MCA2021Session"></span>
+   <span id="SIAMAG2021Symposium"></span>
     <br/><div class="cv">
     <div class="year">
     <h4>2021</h4>
+    </div><div class="title">
+    <h4>&emsp;Minisymposium <em>Computational Real Algebraic Geometry</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4 style="font-size:1.2em;">&ensp;&emsp;<em>(Minisimposio <em>Geometría Algebraica Real Computacional</em>)</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&#160;&#160;en la <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+    <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+      <div class="property">Descripción:</div><div class="value">3 sesiones y 12 charlas</div>
+      <div class="property">Organizador:</div><div class="value">Josu&eacute; Tonelli-Cueto y Cordian Riener</div>
+      <div class="property">Lugar:</div><div class="value">College Station, Texas, EEUU (On-line por la COVID-19)</div>
+      <div class="property">Fecha:</div><div class="value">del 16 al 20 de agosto del 2021</div>
+    </div>
+
+   <span id="MCA2021Session"></span>
+    <br/><div class="cv">
+    <div class="year">
+
     </div><div class="title">
     <h4>&emsp;<a href="http://www.mca2021.org/en/special-sessions/item/26-symbolic-and-numerical-computation-with-polynomials">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div>
     <div class="year"></div><div class="title">
@@ -811,8 +864,8 @@
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
    <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico y del Comité de Pósteres</div>
-     <div class="property">Location:</div><div class="value">Valencia, España (On-line por la COVID-19)</div>
-     <div class="property">Date:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
+     <div class="property">Lugar:</div><div class="value">Valencia, España (On-line por la COVID-19)</div>
+     <div class="property">Fecha:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
    </div>
 
    <!-- 2019
@@ -1267,10 +1320,24 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="MCA2021"></span>
+<span id="SIAMAG2021"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2021</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://www.siam.org/conferences/cm/conference/ag21">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Conferencia SIAM en Geometría Algebraica Aplicada 2021)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Hal Schenck y Josephine Yu (Conference Co-Chairs)</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+  <div class="property">Lugar:</div><div class="value">College Station, Texas, EEUU (On-line por la COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 16 al 20 de agosto del 2021</div>
+</div>
+
+<span id="MCA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="http://www.mca2021.org/en/">Mathematical Congress of the Americas 2021</a></h4></div>
 <div class="year"></div><div class="title">
@@ -1279,6 +1346,56 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Institución anfitriona:</div><div class="value"><a href="http://www.uba.ar/">Universidad de Buenaos Aires</a></div>
   <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
+</div>
+
+<!--<span id="ISSAC2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="http://issac-conference.org/2021/">46th International Symposium on Symbolic and Algebraic Computations (ISSAC'21)</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(46º Simposio Internacional en Computación Algebraica y Simbólica (ISSAC'21))</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Frédéric Chyzak (General Chairs) &ndash; <button onclick="show(2107)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2021org">
+  <div class="property"></div><div class="value">George Labahn (Program Committee Chair)</div>
+  <div class="property"></div><div class="value">Nikolai Vassiliev (Local Arrangements Chair)</div>
+  <div class="property"></div><div class="value">Gleb Pogudin (Treasurer)</div>
+  <div class="property"></div><div class="value">Wei Li (Poster Chair)</div>
+  <div class="property"></div><div class="value">Marc Mezzarobba (Proceedings Editor)</div>
+  <div class="property"></div><div class="value">Daniel Robertz (Publicity Chair)</div>
+  <div class="property"></div><div class="value">Ekaterina Shemyakova (Tutorial Chair)</div>
+  <div class="property"></div><div class="value">Pascal Giorgi (Software Presentations Chair)</div></div>
+  <div class="property">Lugar:</div><div class="value">Saint Petersburg, Russia (On-line por la COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 18 al 22 de julio del 2021</div>
+</div>-->
+
+<span id="MEGA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://puremath.no/mega2021/">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(MEGA2021: Métodos Efectivos en Geometría Algebraica)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Carlos D’Andrea (Chair), Timo de Wolff, Elisa Gorla,</div>
+  <div class="property"></div><div class="value">Gabriela Jeronimo, Kaie Kubjas, Anton Leykin, Fatemeh Mohammadi y Cordian Riener</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://en.uit.no/">UiT – The Arctic University of Norway</a></div>
+  <div class="property">Lugar:</div><div class="value">Tromsø, Noruega (On-line por la COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 7 al 11 de junio del 2021</div>
+</div>
+
+<span id="workshopTDA2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Taller en Análisis Topológico de Datos)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Brittany Fasy, Kathryn Hess, Matthew Kahle, Sayan Mukherjee y Jose Perea</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
+  <div class="property">Lugar:</div><div class="value">Chicago, Illinois, EEUU (On-line por la COVID-19)</div>
+  <div class="property">Fecha:</div><div class="value">del 26 al 30 de abril del 2021</div>
 </div>
 
 <span id="3rdBYMAT"></span>
@@ -1434,7 +1551,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div><div class="title">
    <h4>&emsp;<a href="https://mathsites.unibe.ch/siamag19/">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
    <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(Conferencia SIAM en Geometría ALgebraica Aplicada 2019)</em></h4></div>
+   <h4>&ensp;&emsp;<em>(Conferencia SIAM en Geometría Algebraica Aplicada 2019)</em></h4></div>
      <div class="property">Organizador:</div><div class="value">Sandra Di Rocco y Caroline Uhler (Conference Co-Chairs)</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.unibe.ch/">University of Bern</a></div>
      <div class="property">Lugar:</div><div class="value">Bern, Suiza</div>
@@ -2016,7 +2133,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-anual-2020/">Jornada y Asamblea Anual 2020 de la SIEF</a></h4></div>
         <div class="property">Organizador:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
         <div class="property">Lugar:</div><div class="value">Francia (On-line por la COVID-19)</div>
-        <div class="property">Date:</div><div class="value">28 de noviembre del 2020</div>
+        <div class="property">Fecha:</div><div class="value">28 de noviembre del 2020</div>
       </div>
 
 
@@ -2339,6 +2456,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
     function show(y) {
       if (y === 1901){var x = document.getElementById("ISSAC2019org");}
       if (y === 1902){var x = document.getElementById("ISSAC2020org");}
+      if (y === 2107){var x = document.getElementById("ISSAC2021org");}
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
