--- a/cv.html
+++ b/cv.html
@@ -546,6 +546,7 @@
          <br/><div class="cv">
          <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with C. Riener.</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
@@ -679,7 +680,7 @@
        <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/OURAGAN06052021_slides.pdf">Slides</a></span>--></div>
         <div class="property">Institution:</div><div class="value"><a href="">Inria Paris</a></div>
         <div class="property">Location:</div><div class="value">Paris, France (On-line)</div>
-        <div class="property">Date:</div><div class="value">30th of June of 2020</div>
+        <div class="property">Date:</div><div class="value">6th of May of 2020</div>
       </div>
 
       <br/><div class="cv">
