--- a/cv_es.html
+++ b/cv_es.html
@@ -731,7 +731,7 @@
 
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021"><em>Topological Data Analysis</em> Workshop</a></h4></div>
-        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets via TDA<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Póster</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets via TDA<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_SetsTDA.pdf">Póster</a></span></div>
         <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Póster on-line due to the COVID-19)</div>
       </div>
 
@@ -1397,7 +1397,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 </div><div class="title">
 <h4>&emsp;<a href="https://divulganextgen.kunvoca.es/">Divulga NextGen - Congreso online</a></h4></div>
-  <div class="property">Organizador:</div><div class="value">Lucía Olmo García, Enrique Javier Carrasco Correa, Gloria Domínguez Rodríguez, Elena Sánchez López, Rafael Carlos Estévez Toledano y Beatriz María Fresco Cala</div>
+  <div class="property">Organizador:</div><div class="value"><a href="https://kunvoca.es/webroot/index.php">Kunvoca</a></div>
   <div class="property">Lugar:</div><div class="value">On-line</div>
   <div class="property">Fecha:</div><div class="value">26th to 28th of May of 2021</div>
 </div>
