divulganextgen, referee, cv

--- a/non-research.html
+++ b/non-research.html
@@ -126,6 +126,10 @@
       After my role in $\pi kasle$, I have been less active in the popularization of mathematics, although I would like to become more active sometime in the future. My contributions to popular mathematics after my role at $\pi kasle$ are listed below.
     </p>
     <br/><div class="cv">
+    <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Semi... ¿qué?<br/>&emsp;Las múltiples formas de lo semialgebraico y cómo determinarlas<a class="btn btn-pikasle" href="https://www.youtube.com/watch?v=ME3BuPjSa-4"  role="button">Video</a></h4></div>
+    <div class="pretalktitle"></div><div class="collaborator">Presented at <a href="cv.html#divulganextgen2021">Congreso Online <span style="font-variant:small-caps;">Divulga NextGen</span> (1ª edición)</a> on the 28th of May of 2021. Accompanying text: J. Tonelli-Cueto. Semi... ¿qué? Las múltiples formas de lo semialgebraico y cómo determinarlas (Spanish) [Semi... what? The multiple shapes of the semialgebraic and how to determine them]. In <i>Libro de Resúmenes de Divulga NextGen I (26, 27 y 28 de Mayo de 2021)</i>, pages 42-43. Zenodo, 2021.. <span><a href="http://doi.org/10.5281/zenodo.4718329">DOI 10.5281/zenodo.4718329</a></span></div>
+    </div>
+    <br/><div class="cv">
     <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;¿C&oacute;mo computar la &ldquo;forma&rdquo; de un conjunto semialgebraico?<a class="btn btn-pikasle" href="thesis/genehmigteDissertation_TonelliCueto.pdf#page=251"  role="button">Text</a></h4></div>
     <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. ¿C&oacute;mo computar la &ldquo;forma&rdquo; de un conjunto semialgebraico? (Spanish) [How to compute the &ldquo;shape&rdquo; of a semialgebraic set?]. In J. Tonelli-Cueto. <em>Condition and Homology in Semialgebraic Geometry</em>. Doctoral   thesis,   Technische   Universit&auml;t   Berlin,   DepositOnce   Repository,   December   2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
     </div>
