--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -402,6 +402,12 @@
   <h3>Vídeos de ponencias en conferencias y otros eventos</h3>
   <p>Estos son vídeos de algunas de mis ponencias en conferencias. Los vídeos disponibles en YouTube están recogidos en una <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>lista de reproducción de YouTube</em></a>.</p>
   <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/ME3BuPjSa-4" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+       <p style="text-align:center;"><b style="color:#ee2523;">Semi.. ¿qué?<br/>Las múltiples formas de lo semialgebraico y cómo determinarlas</b><br/>Congreso Online <span style="font-variant:small-caps;">Divulga NextGen</span> (1ª edición), mayo de 2021</p>
+    </div>
+    <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/Y9gKSLMfVlY" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
        <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Theorem & its relatives</b><br/><a href="https://www.youtube.com/watch?v=r7Fv9o2wfXY&list=PL4kY-dS_mSmJabQiM2ySRSUusbvmdIxBt">Tutorial-a-thon de la AATRN</a>, marzo de 2021</p>
