--- a/cv.html
+++ b/cv.html
@@ -552,13 +552,13 @@
 
          <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Slides</a> / <a href="">Video</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<span style="float:right;"><a href="pdf/MEGA2021_slides_41.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=hmFY7y9Uyic">Teaser</a> / <a href="https://www.youtube.com/watch?v=KYDo42gCZYg">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
          <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">Functional norms, condition numbers and numerical algorithms in algebraic geometry<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Slides</a> / <a href="">Video</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle">Functional norms, condition numbers and numerical algorithms in algebraic geometry<span style="float:right;"><a href="pdf/MEGA2021_slides_18.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=4Qu0F3x2f6Y">Teaser</a> / <a href="https://www.youtube.com/watch?v=_mO_MQXjhiA">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with F. Cucker and A.A. Ergür.</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
