--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -402,6 +402,20 @@
   <h3>Vídeos de ponencias en conferencias y otros eventos</h3>
   <p>Estos son vídeos de algunas de mis ponencias en conferencias. Los vídeos disponibles en YouTube están recogidos en una <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>lista de reproducción de YouTube</em></a>.</p>
   <div class="row">
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/hmFY7y9Uyic" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/KYDo42gCZYg" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">A Numerical Algorithm for Zero Counting. IV: An Adaptive Speedup</b><br/>MEGA2021, June 2021</p></div>
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/4Qu0F3x2f6Y" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/_mO_MQXjhiA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </div>
+    <div class="col-md-12"><p style="text-align:center;"><b style="color:#ee2523;">Functional norms, condition numbers and numerical algorithms in algebraic geometry</b><br/>MEGA2021, June 2021</p></div>
     <div class="col-md-3"></div>
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/ME3BuPjSa-4" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
