--- a/cv.html
+++ b/cv.html
@@ -684,7 +684,7 @@
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Finding real zeros a lot faster through an adaptive grid<span style="float:right;"><a href="pdf/coloquioUFRJ2021.pdf">Slides</a>/<a href="https://www.youtube.com/watch?v=-k98ObndRZE">Video</a></span></div>
-        <div class="property">Institution:</div><div class="value"><a href="https://ufrj.br/">Universidad Federal do Rio de Janeiro</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://ufrj.br/">Universidade Federal do Rio de Janeiro</a></div>
         <div class="property">Location:</div><div class="value">Rio de Janeiro, Brasil (On-line)</div>
         <div class="property">Date:</div><div class="value">9th of July of 2021</div>
       </div>
