--- a/cv_es.html
+++ b/cv_es.html
@@ -667,7 +667,7 @@
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="http://www.im.ufrj.br/index.php/pt/noticias-e-eventos/noticias/1771-coloquio-de-matematica-aplicada-09-07-2021">Coloquio de Matemática Aplicada del Insituto de Matemática de la UFRJ</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Finding real zeros a lot faster through an adaptive grid<span style="float:right;"><a href="pdf/coloquioUFRJ2021.pdf">Diapositivas</a>/<a href="https://www.youtube.com/watch?v=-k98ObndRZE">Vídeo</a></span></div>
-        <div class="property">Institución:</div><div class="value"><a href="https://ufrj.br/">Universidad Federal do Rio de Janeiro</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://ufrj.br/">Universidade Federal do Rio de Janeiro</a></div>
         <div class="property">Lugar:</div><div class="value">Río de Janeiro, Brasil (On-line)</div>
         <div class="property">Fecha:</div><div class="value">9 de julio del 2021</div>
       </div>
