--- a/cv_es.html
+++ b/cv_es.html
@@ -112,16 +112,21 @@
     <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" Labor="button" style="width:80%;">Versión 2 páginas (PDF) [Inglés]</a>
   </div></div>
   <hr>
-  <div class="row" style="text-align:center;"><div class="col-md-6">
+  <div class="row" style="text-align:center;"><div class="col-md-3"></div><div class="col-md-6">
     <a class="btn btn-orcid" href="https://orcid.org/0000-0002-2904-1215" role="button">ORCiD <i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>
-  </div><div class="col-md-6">
-    <a class="btn btn-mathscinet" href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1346001" role="button">MathScinet MR Author ID: 1346001</a>
-  </div></div>
+  </div><div class="col-md-3"></div></div>
+  <br/>
   <br/>
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-idarxiv" href="https://arxiv.org/a/tonellicueto_j_1.html" role="button">arxiv ID: tonellicueto_j_1</a>
   </div><div class="col-md-6">
     <a class="btn btn-idhal" href="https://cv.archives-ouvertes.fr/tonelli-cueto" role="button">IdHal: tonelli-cueto</a>
+  </div></div>
+  <br/>
+  <div class="row" style="text-align:center;"><div class="col-md-6">
+    <a class="btn btn-mathscinet" href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1346001" role="button">MathScinet MR Author ID: 1346001</a>
+  </div><div class="col-md-6">
+    <a class="btn btn-zbmath" href="https://zbmath.org/authors/?q=ai:tonelli-cueto.josue" role="button">zbMATH Author ID: 1346001</a>
   </div></div>
 <hr>
    <div id="positions">
@@ -526,6 +531,13 @@
 
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+     <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
+       <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
+       <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia contribuida, enviada como póster)</div>
+       <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+     </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> en la <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
