--- a/cv.html
+++ b/cv.html
@@ -110,16 +110,20 @@
     <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" role="button" style="width:80%;">2-page Résumé (PDF)</a>
   </div></div>
   <hr>
-  <div class="row" style="text-align:center;"><div class="col-md-6">
+  <div class="row" style="text-align:center;"><div class="col-md-3"></div><div class="col-md-6">
     <a class="btn btn-orcid" href="https://orcid.org/0000-0002-2904-1215" role="button">ORCiD <i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>
-  </div><div class="col-md-6">
-    <a class="btn btn-mathscinet" href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1346001" role="button">MathScinet MR Author ID: 1346001</a>
-  </div></div>
+  </div><div class="col-md-3"></div></div>
   <br/>
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-idarxiv" href="https://arxiv.org/a/tonellicueto_j_1.html" role="button">arxiv ID: tonellicueto_j_1</a>
   </div><div class="col-md-6">
     <a class="btn btn-idhal" href="https://cv.archives-ouvertes.fr/tonelli-cueto" role="button">IdHal: tonelli-cueto</a>
+  </div></div>
+  <br/>
+  <div class="row" style="text-align:center;"><div class="col-md-6">
+    <a class="btn btn-mathscinet" href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1346001" role="button">MathScinet MR Author ID: 1346001</a>
+  </div><div class="col-md-6">
+    <a class="btn btn-zbmath" href="https://zbmath.org/authors/?q=ai:tonelli-cueto.josue" role="button">zbMATH Author ID: 1346001</a>
   </div></div>
 <hr>
    <div id="positions">
@@ -544,7 +548,14 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
+           <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Contributed talk, submitted as poster)</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with C. Riener.</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
@@ -762,12 +773,6 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Posters</h3>
       </div></div>
-
-      <br/><div class="cv">
-      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
-        <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Poster</a></span>--></div>
-        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
-      </div>
 
       <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021"><em>Topological Data Analysis</em> Workshop</a></h4></div>
