colors zbmath button

--- a/cv_es.html
+++ b/cv_es.html
@@ -126,7 +126,7 @@
   <div class="row" style="text-align:center;"><div class="col-md-6">
     <a class="btn btn-mathscinet" href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1346001" role="button">MathScinet MR Author ID: 1346001</a>
   </div><div class="col-md-6">
-    <a class="btn btn-zbmath" href="https://zbmath.org/authors/?q=ai:tonelli-cueto.josue" role="button">zbMATH Author ID: 1346001</a>
+    <a class="btn btn-zbmath" href="https://zbmath.org/authors/?q=ai:tonelli-cueto.josue" role="button">zbMATH Author ID: tonelli-cueto.josue</a>
   </div></div>
 <hr>
    <div id="positions">
