Update of contact picture
Update of contact picture and some multimedia images

--- a/contact_es.html
+++ b/contact_es.html
@@ -74,16 +74,16 @@
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
     <center>
-<a href="https://www.instagram.com/p/BvYhw99gQo7/"><img src="imgs/contact.jpg" alt="Josu&eacute; Tonelli Cueto enfrente de buzones antiguos en el Hong Kong Museum of History" style="width:94%;"></a>
+<img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli Cueto en alg&uacute;n lugar de Venezia" style="width:94%;">
    </center>
-<p align="center" style="font-size:x-small;">En frente de buzones antiguos en el <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a></p>
+<p align="center" style="font-size:x-small;">Delante de un muro cubierto de pan de oro en Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
      <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
-     <p align="left">
-       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
-       Sorbonne Université - Campus Pierre et Marie Curie<br/>
+     <p style="text-align:left;">
+       <b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
+       Sorbonne Université<br/> - Campus Pierre et Marie Curie<br/>
        Boite Courrier 247<br/>
        4, place Jussieu<br/>
        75252 Paris Cedex 05<br/>
