--- a/cv.html
+++ b/cv.html
@@ -296,7 +296,7 @@
          <div class="year">
          <h4>2020</h4>
          </div><div class="title">
-         <h4>&emsp;3. Preis im <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius-Preis 2020 - Preis der Berliner Hochschulen</em></a><span style="float:right;"><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">Jury's Decision</a></span></h4></div>
+         <h4>&emsp;3. Preis im <a href="https://web.archive.org/web/20210128001846/https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius-Preis 2020 - Preis der Berliner Hochschulen</em></a><span style="float:right;"><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">Jury's Decision</a></span></h4></div>
          <div class="year"></div><div class="title">
          <h4>&ensp;&emsp;<em>(3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>)</em></h4></div>
            <div class="property">Reason:</div><div class="value">Doctoral thesis</div>
