--- a/multimedia.html
+++ b/multimedia.html
@@ -245,6 +245,21 @@
   <h2 class="display-4">Photos</h2>
   <p>These are either some pictures of myself in several situations or photos taken by me.</p>
   <div class="row" style="display:flex;align-items: center;">
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto somewhere in Venezia"/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2021 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Venezia, July 2021</p>
+      <p style="text-align:justify;font-size:small;">In front of a gold leafed wall.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <a href="https://www.instagram.com/p/CN572c7AIoB/"><img style="width:90%;" src="imgs/origami_crane_MPF.jpg" alt="Origami crane in a door of the Maison des Provinces de France of the Cité Internationale Universitaire de Paris"/></a>
+      <p style="margin:0;text-align:center;font-size:0.5em;">&emsp;</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Paris, 21st April of 2020</p>
+      <p style="text-align:justify;font-size:small;">During the first confinement in Paris, I made around one hundred origami cranes out of some flyers. Then, in one night, I put them in each one of the doors of the floor of the residence in which I was.</p>
+    </div>
+
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc03.JPG" alt="Josue Tonelli-Cueto and his academic and non-academic parents after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
@@ -273,6 +288,10 @@
       <p style="text-align:justify;font-size:small;">Giving the talk <em>Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</em> at Minisymposium <em>Numerical methods for structured polynomial system solving</em> of the SIAM Conference on Applied Algebraic Geometry 2019.</p>
     </div>
 
+ </div>
+ <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Show more pictures</button></p>
+ <div id="extrapictures" class="row" style="display:none;align-items: center;">
+
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/MEGA2019.jpg" alt="Josué Tonelli-Cueto in front of his poster at the MEGA 2019"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Cordian Riener)</p>
@@ -287,9 +306,12 @@
      <p style="text-align:justify;font-size:small;">Giving the talk <em>Hom many zeros does a random fewnomial system have?</em> at the 2nd BYMAT Conference.</p>
    </div>
 
- </div>
- <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Show more pictures</button></p>
- <div id="extrapictures" class="row" style="display:none;align-items: center;">
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josu&eacute; Tonelli-Cueto in front of old postboxes in the Hong Kong Museum of History"/></a>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Hong Kong, March 2019</p>
+     <p style="text-align:justify;font-size:small;">In front of old postboxes in the <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a>.</p>
+   </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
