--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -246,6 +246,22 @@
   <h2 class="display-4">Fotos</h2>
   <p>Esta son fotos de mi en varias situaciones o fotos tomadas por mi.</p>
   <div class="row" style="display:flex;align-items: center;">
+
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto en algún lugar de Venezia"/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2021 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Venezia, julio de 2021</p>
+      <p style="text-align:justify;font-size:small;">Delante de un muro cubierto de pan de oro.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <a href="https://www.instagram.com/p/CN572c7AIoB/"><img style="width:90%;" src="imgs/origami_crane_MPF.jpg" alt="Grulla de origami en una puerta de la Maison des Provinces de France de la Cité Internationale Universitaire de Paris"/></a>
+      <p style="margin:0;text-align:center;font-size:0.5em;">&emsp;</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">París, 21 de abril de 2020</p>
+      <p style="text-align:justify;font-size:small;">Durante el primer confinamiento en París, hice unas cien grullas de origami y, en una noche, las puse en cada una de las puertas del piso de la residencia donde estaba.</p>
+    </div>
+
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc03.JPG" alt="Josue Tonelli-Cueto and his academic and non-academic parents after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
@@ -274,6 +290,11 @@
       <p style="text-align:justify;font-size:small;">Dando la charla <em>Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</em> en el Minisimposio <em>Numerical methods for structured polynomial system solving</em> de la SIAM Conference on Applied Algebraic Geometry 2019.</p>
     </div>
 
+
+ </div>
+ <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Mostrar m&aacute;s fotos</button></p>
+ <div id="extrapictures" class="row" style="display:none;align-items: center;">
+
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/MEGA2019.jpg" alt="Josué Tonelli-Cueto in front of his poster at the MEGA 2019"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Cordian Riener)</p>
@@ -287,9 +308,14 @@
      <p style="margin:0;text-align:center;padding-top:0em;">Madrid, mayo de 2019</p>
      <p style="text-align:justify;font-size:small;">Dando la charla <em>Hom many zeros does a random fewnomial system have?</em> en la 2nd BYMAT Conference.</p>
    </div>
- </div>
- <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Mostrar m&aacute;s fotos</button></p>
- <div id="extrapictures" class="row" style="display:none;align-items: center;">
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josu&eacute; Tonelli Cueto enfrente de buzones antiguos en el Hong Kong Museum of History"/></a>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Hong Kong, March 2019</p>
+     <p style="text-align:justify;font-size:small;">Delante de unos buzones antiguos en el <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a>.</p>
+   </div>
+
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 &ldquo;What is...?&rdquo; Seminar)</p>
